Fixed wrong subsection labelling

--- a/report/final_report.tex
+++ b/report/final_report.tex
@@ -89,8 +89,8 @@
   Avant toute chose, nous avions segmenté en trois les étapes du processus de recherche.
   Ces étapes sont la revue de littérature, l'identification de logiciels scientifiques, et le prototypage.
 
-  \subsection{Headings: Revue de littérature}
-  \label{subsec:headings:literature-review}
+  \subsection{Revue de littérature}
+  \label{subsec:literature-review}
 
   Essentiellement, mon professeur-superviseur de recherche m'a formé par l'entremise de la lecture de divers articles scientifiques sur la matière du contexte du
   projet, soit la neurophotonique, et la matière du but du projet, soit la tractographie.
@@ -103,8 +103,8 @@
   \textit{Polarization-Sensitive Optical coherence refraction tomography}~\cite{lefebvre2021psocrt},
   \textit{Fiberfox: facilitating the creation of realistic white matter software phantoms}~\cite{neher2014fiberfox}.
 
-  \subsection{Headings: Identification de logiciels scientifiques}
-  \label{subsec:headings:software-search}
+  \subsection{Identification de logiciels scientifiques}
+  \label{subsec:software-search}
 
   Aux fins de la sélection d'un logiciel scientifique potentiellement capable de satisfaire les exigences du projet, nous avons défini des critères de sélections.
   Ceux-ci sont la capacité d'automatisation potentielle, l'ergonomie et l'\href{https://fr.wikipedia.org/wiki/Ind%C3%A9pendance_fonctionnelle}{indépendance
@@ -118,8 +118,8 @@
   De plus, comme critère plus spécifique, nous voulions aussi nous simplifier la vie en choisissant idéalement un logiciel scientifique avec une interface en
   \textbf{Python} afin de facilement prototyper et, plus tard, intégrer le projet au code du LINUM~.
 
-  \subsection{Headings: Prototypage}
-  \label{subsec:headings:prototyping}
+  \subsection{Prototypage}
+  \label{subsec:prototyping}
 
   L'étape du prototypage est primordiale à la vérification de l'utilité et du respect des exigences pour logiciel scientifique identifié.
   Pour ce faire, je tentais par tous les moyens possibles d'employer une \href{https://fr.wikipedia.org/wiki/Interface_de_programmation}{API} publique du logiciel ciblé.
