--- a/report/final_report.tex
+++ b/report/final_report.tex
@@ -130,7 +130,7 @@
   \section{Résultats}
   \label{sec:results}
 
-  Nous avions identifié plusieurs logiciels scientifiques potentiellement capable de satisfaire les exigences du projet.
+  Nous avions identifié plusieurs logiciels scientifiques potentiellement capables de satisfaire les exigences du projet.
   Ceux-ci sont \textit{Fiberfox}, les adaptateurs de \textit{Fiberfox} sur GitHub, \textit{Simulation Generator} et \textit{Phantomas}~\cite{caruyer2014phantomas}.
 
   \begin{table}[H]
