Fixed report submission date

--- a/report/final_report.tex
+++ b/report/final_report.tex
@@ -17,6 +17,9 @@
 \usepackage{lipsum}
 \usepackage{float}            % inline table with [H]
 \usepackage{graphicx}         % show image
+\usepackage[useregional]{datetime2}
+
+\DTMsavedate{pubdate}{2022-05-23}
 
 \setmainfont{Times New Roman} % XeLaTeX
 
