--- a/report/arxiv.sty
+++ b/report/arxiv.sty
@@ -29,7 +29,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyheadoffset{0pt}
-\rhead{\scshape \today}
+\rhead{\scshape \DTMusedate{pubdate}}
 \cfoot{\thepage}
 
 
@@ -226,7 +226,7 @@
       \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
     }
     \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\@author\end{tabular}%
-  \vskip 0.4in \@minus 0.1in \center{\today}   \vskip 0.2in
+  \vskip 0.4in \@minus 0.1in \center{\DTMusedate{pubdate}}   \vskip 0.2in
   }
 }
 
